--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -20,6 +20,7 @@ http {
 		listen <%= ENV["PORT"] %>;
 
 		location / {
+			proxy_ssl_server_name on;
 			proxy_pass <%= ENV["UPSTREAM_SERVER"] %>;
 			proxy_http_version 1.1;
 			proxy_buffering off;
